--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ main {
     height: 100%;
     display: flex;
     /* width: max-content; */
-    gap: 10px;
+    gap: 20px;
     align-items: center;
     margin: 0px 30px;
     font-size: 22px;
@@ -188,6 +188,7 @@ main {
     color: var(--white);
     gap: 10px;
     /* background-color: red; */
+    align-items: center;
 }
 #seek-slider {
     flex: 1 1 auto;
@@ -197,22 +198,21 @@ main {
 
 input[type="range"] {
     -webkit-appearance: none;
-    margin-right: 15px;
     width: 0px;
-    height: 7px;
-    background: rgba(255, 255, 255, 0.6);
+    height: 3px;
+    background: var(--gray);
     border-radius: 5px;
-    background-image: linear-gradient(#ff4500, #ff4500);
+    background-image: linear-gradient(var(--white), var(--white));
     background-size: 0% 100%;
     background-repeat: no-repeat;
 }
 
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    height: 20px;
-    width: 20px;
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
-    background: #ff4500;
+    background: var(--white);
     cursor: ew-resize;
     box-shadow: 0 0 2px 0 #555;
     transition: background 0.3s ease-in-out;
