--- a/style.css
+++ b/style.css
@@ -189,43 +189,12 @@ main {
     gap: 10px;
     /* background-color: red; */
     align-items: center;
+    margin-right: 15px;
 }
 #seek-slider {
     flex: 1 1 auto;
 }
 
-/* range styling start*/
-
-input[type="range"] {
-    -webkit-appearance: none;
-    width: 0px;
-    height: 3px;
-    background: var(--gray);
-    border-radius: 5px;
-    background-image: linear-gradient(var(--white), var(--white));
-    background-size: 0% 100%;
-    background-repeat: no-repeat;
-}
-
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background: var(--white);
-    cursor: ew-resize;
-    box-shadow: 0 0 2px 0 #555;
-    transition: background 0.3s ease-in-out;
-}
-
-input[type="range"]::-webkit-slider-runnable-track {
-    -webkit-appearance: none;
-    box-shadow: none;
-    border: none;
-    background: transparent;
-}
-
-/* range styling end*/
 i {
     cursor: pointer;
 }
