--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 html,
 body {
     height: 100%;
+    font-family: "Roboto", sans-serif;
 }
 /*
     Typographic tweaks!
@@ -82,7 +83,7 @@ body {
     position: relative;
     width: 100vw;
     height: 100vh;
-    background-color: gray;
+    /* background-color: gray; */
     grid-template-columns: 300px auto;
     grid-template-rows: 70px auto 100px;
     overflow-y: hidden;
@@ -90,21 +91,75 @@ body {
 }
 
 nav {
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+    display: flex;
+    padding: 0px 15px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .fa-chevron-left,
+nav .fa-chevron-right {
+    padding: 10px 10px;
+    border: 2px solid #c5c6c669;
+}
+nav form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    background-color: var(--white);
+    width: max-content;
+    padding: 5px 10px;
+}
+nav input[type="text"] {
+    background-color: var(--white);
+    border: none;
+    outline: none;
+}
+nav input[type="text"]:focus,
+nav input[type="text"]::selection {
+    outline: #000;
 }
 
 /* sidebar styles */
 .sidebar {
-    background-color: antiquewhite;
+    /* background-color: var(--white); */
+    /* border-right: 2px solid rgba(180, 180, 180, 0.527); */
     grid-row-start: 1;
     grid-row-end: 3;
     grid-column-start: 1;
     grid-column-end: 2;
     overflow-y: auto;
+}
+
+.sidebar-list-items {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 85%;
+    margin: 10px auto;
+    margin-top: 40px;
+}
+.sidebar-list-items [data-link] {
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+    gap: 10px;
+    padding: 0px 10px;
+    color: #7b818ad7;
+    font-size: 18px;
+    cursor: pointer;
+}
+.sidebar-list-items [data-link].active {
+    /* background-color: #dedee6; */
+    background-color: var(--white);
+    color: #000;
 }
 #logo {
     width: 90%;
@@ -118,11 +173,17 @@ nav {
 }
 /* main styles */
 main {
-    background-color: beige;
+    /* background-color: #e6e6e663; */
     grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 3;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px 20px;
+    max-height: calc(100vh - 170px);
+    overflow-y: auto;
 }
 .audio-player {
     background-color: aliceblue;
@@ -133,6 +194,8 @@ main {
     background-color: var(--black);
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 1;
 }
 .audio-player .music-info {
     height: 100%;
@@ -204,26 +267,184 @@ i {
 
 .songs-queue {
     position: absolute;
-    background-color: bisque;
-    height: calc(100vh - 170px);
-    width: 600px;
-    bottom: 100px;
-    right: -600px;
+    background-color: var(--white);
+    height: calc(100vh - 200px);
+    /* bottom: 100px; */
+    top: calc(100vh - 100px);
+    /* bottom: 30px; */
+    right: 0px;
+    left: 300px;
     transition: 0.3s ease transform;
+    /* transform: translateY(100%); */
+    /* z-index: -1; */
+}
+.songs-queue .container {
+    padding: 20px;
 }
 .songs-queue-toggler {
     position: absolute;
-    background-color: whitesmoke;
-    border: 2px solid bisque;
+    background-color: white;
     display: block;
     z-index: 10;
-    top: 50%;
-    height: max-content;
-    transform: rotate(270deg) translateX(50%);
     padding: 5px 10px;
-    left: -48px;
+    left: 0;
+    right: 0;
     cursor: pointer;
+    font-size: 18px;
+    display: flex;
+    gap: 5px;
+    top: -40px;
+    width: max-content;
+    margin: 0 auto;
+    border: 2px solid var(--white);
+    border-bottom: none;
+}
+.songs-queue-toggler i {
+    position: relative;
+    top: 5px;
 }
 .songs-queue.open {
-    transform: translateX(-100%);
+    transform: translateY(-100%);
+}
+.songs-queue .fa-chevron-down {
+    display: none;
+}
+.songs-queue.open .fa-chevron-down {
+    display: block;
+}
+.songs-queue .fa-chevron-up {
+    display: block;
+}
+.songs-queue.open .fa-chevron-up {
+    display: none;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes rotate {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.load {
+    width: 30px;
+    height: 30px;
+    margin: 0px auto 0;
+    border: solid 5px #cacaca;
+    border-radius: 50%;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    -webkit-transition: all 0.5s ease-in;
+    -webkit-animation-name: rotate;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    transition: all 0.5s ease-in;
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+/* custom scrollbar */
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+.custom-scroll {
+    scrollbar-width: auto;
+    scrollbar-color: #cdcbcd #fcfcfc;
+}
+
+/* Chrome, Edge, and Safari */
+.custom-scroll::-webkit-scrollbar {
+    width: 11px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+    background: #fcfcfc;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+    background-color: #cdcbcd;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+}
+
+#topTracks,
+#topArtists,
+#topGenre {
+    height: max-content;
+}
+.topTracks-list,
+.topArtists-list,
+.topGenre-list {
+    height: 210px;
+    display: flex;
+    align-items: center;
+    padding: 0px 10px;
+    overflow-y: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
+}
+
+.song-card {
+    height: 190px;
+    /* width: 150px; */
+    /* overflow: hidden; */
+    background-color: var(--white);
+    /* background-color: red; */
+    cursor: pointer;
+    flex: 0 0 150px;
+    position: relative;
+}
+.song-card p {
+    /* text-align: center; */
+    padding-left: 5px;
+    line-height: 20px;
+}
+.song-card img {
+    height: 150px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.song-card .fa-ellipsis {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.song-card .song-card-options {
+    display: none;
+    position: absolute;
+    top: 35px;
+    right: 5px;
+    background-color: white;
+}
+.song-card .song-card-options p {
+    padding: 5px 10px;
+    margin: 3px;
+    cursor: pointer;
+}
+.song-card .song-card-options.open-options {
+    display: block;
 }
