add design files

--- a/style.css
+++ b/style.css
@@ -553,11 +553,14 @@ i {
 #topGenre {
     height: max-content;
 }
+.topTracks-list {
+    padding: 20px 0px;
+}
 .topTracks-list,
 .topArtists-list,
 .topGenre-list,
 .topPlaylist-list {
-    height: 210px;
+    min-height: 210px;
     display: flex;
     align-items: center;
     padding: 0px 10px;
