--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ nav input[type="text"] {
     background-color: var(--white);
     border: none;
     outline: none;
+    height: 35px;
+    width: 400px;
 }
 nav input[type="text"]:focus,
 nav input[type="text"]::selection {
@@ -184,6 +186,7 @@ main {
     padding: 20px 20px;
     max-height: calc(100vh - 170px);
     overflow-y: auto;
+    padding-right: 90px;
 }
 
 #topArtists .topArtists-list {
@@ -277,7 +280,7 @@ main {
 
 .artistBio {
     /* background-color: #cacaca; */
-    flex: 0 0 30%;
+    flex: 0 0 25%;
     padding: 0px 10px;
     min-height: 100%;
     max-height: 340px;
@@ -335,8 +338,8 @@ main {
     max-height: 300px;
     overflow-y: auto;
 }
-.albumDivContainer {
-    border-right: 1px solid #dadce0;
+.albumDivContainer,
+.tracksDivContainer {
     border-left: 1px solid #dadce0;
 }
 
@@ -435,22 +438,29 @@ i {
     position: absolute;
     background-color: white;
     border: 2px solid var(--white);
-    height: calc(100vh - 170px);
+    height: 350px;
     /* bottom: 100px; */
-    top: calc(100vh - 100px);
-    /* bottom: 30px; */
-    right: 0px;
-    left: 235px;
-    transition: 0.3s ease transform;
+    /* top: calc(100vh - 100px); */
+    bottom: 230px;
+    right: 10px;
+    /* left: 235px; */
+    width: 80px;
+    /* width: 500px; */
+    transition: 0.3s ease width;
+    white-space: nowrap;
+    overflow: hidden;
     /* transform: translateY(100%); */
     /* z-index: -1; */
+}
+.songs-queue:hover {
+    width: 500px;
 }
 .songs-queue .container {
     padding: 20px;
 }
 .songs-queue-toggler {
-    position: absolute;
-    background-color: white;
+    /* position: absolute; */
+    /* background-color: white;
     display: block;
     z-index: 10;
     padding: 5px 10px;
@@ -464,7 +474,7 @@ i {
     width: max-content;
     margin: 0 auto;
     border: 2px solid var(--white);
-    border-bottom: none;
+    border-bottom: none; */
 }
 .songs-queue-toggler i {
     position: relative;
@@ -569,8 +579,79 @@ i {
 .topTracks-list {
     padding: 20px 0px;
 }
+#topPlaylist .topPlaylist-list {
+    flex-direction: column;
+    gap: 20px;
+    height: auto;
+    width: 100%;
+    position: relative;
+    align-items: unset;
+    /* align-content: flex-start;
+    justify-content: flex-start; */
+}
+#topPlaylist .topPlaylist-list > .load {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+}
 .topTracks-list.custom-scroll::-webkit-scrollbar {
     height: 11px;
+}
+
+.topPlaylist-list .playlist-item {
+    display: grid;
+    grid-template-rows: 35px 230px;
+    grid-template-columns: 30% 70%;
+    gap: 0px;
+    padding: 0px;
+}
+.topPlaylist-list img {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: azure;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.topPlaylist-list .playlist-name {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    /* background-color: beige; */
+    padding-left: 10px;
+    margin: 0px;
+}
+.topPlaylist-list .playlist-tracks {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    /* background-color: #dadce0; */
+    height: 100%;
+    overflow: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    position: relative;
+}
+.topPlaylist-list .playlist-tracks .song-card {
+    /* background-color: red; */
+    width: 165px;
+    height: 190px;
+    margin: 10px;
+}
+.playlist-tracks .load {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
 }
 
 .song-card {
