--- a/style.css
+++ b/style.css
@@ -451,6 +451,7 @@ i {
     overflow: hidden;
     /* transform: translateY(100%); */
     /* z-index: -1; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 .songs-queue:hover {
     width: 500px;
