--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ main {
 }
 .artistAlbums {
     /* background-color: #cacaca; */
-    flex: 1 1 35%;
+    flex: 0 0 35%;
     padding: 0px 10px;
     min-height: 100%;
     position: relative;
@@ -657,9 +657,15 @@ i {
     /* text-align: center; */
     padding-left: 5px;
     line-height: 20px;
+    overflow: hidden;
+    padding: 6px;
+    height: 30px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .song-card img {
-    height: 150px;
+    height: 160px;
     width: 100%;
     object-fit: cover;
     user-select: none;
