--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ main {
 
 .artistBio {
     /* background-color: #cacaca; */
-    flex: 0 0 25%;
+    flex: 0 0 30%;
     padding: 0px 10px;
     min-height: 100%;
     max-height: 340px;
@@ -392,7 +392,7 @@ main {
     gap: 20px;
     max-height: 300px;
     overflow-y: auto;
-    max-width: 460px;
+    max-width: 400px;
 }
 .albumDivContainer,
 .tracksDivContainer {
@@ -608,7 +608,8 @@ i {
 .topTracks-list,
 .topArtists-list,
 .topGenre-list,
-.topPlaylist-list {
+.topPlaylist-list,
+.search-results-container {
     min-height: 210px;
     display: flex;
     align-items: center;
@@ -759,4 +760,13 @@ i {
 
 .hide-page {
     display: none;
+}
+.search-results-container {
+    min-height: 200px;
+    padding: 20px;
+}
+.noResult {
+    position: relative;
+    top: -80px;
+    right: 20px;
 }
