--- a/style.css
+++ b/style.css
@@ -986,10 +986,10 @@ nav form .custom-drop-down .option:hover {
 } */
 .footer-icons {
     display: flex;
-    gap: 10px;
+    /* gap: 10px; */
     padding: 10px 0px;
     background-color: #f1eeee;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 80px;
 }
